# OculusRiftInAction

./: .gitmodules  CMakeLists.txt  package.xml
examples/cpp/: CMakeLists.txt  Example_2_4_HelloRift.cpp
examples/cpp/common/: Chapter_5.cpp  Chapter_5.h  Common.cpp  Common.h  Font.h  GlLighting.h  GlMesh.h  GlStacks.h  GlUtils.cpp  GlUtils.h  GlfwApp.cpp  GlfwApp.h  Interaction.cpp  Rift.cpp  Rift.h
examples/cpp/opencv/: ExampleWebcamVideo.cpp  OculusTool.cpp
examples/cpp/steamworks/: Example_Steamworks.cpp
scripts/: hmd_to_head.py
